Upgrade to plugin-plugin 20.4.0