@@ -16,7 +16,7 @@
 
 
 plugins {
-    id 'com.netflix.nebula.plugin-plugin' version '20.3.0'
+    id 'com.netflix.nebula.plugin-plugin' version '20.4.0'
 }
 
 compileGroovy.groovyOptions.configurationScript = file('src/groovyCompile/groovycConfig.groovy')
@@ -120,11 +120,5 @@ gradlePlugin {
             implementationClass= 'nebula.plugin.info.scm.ScmInfoPlugin'
             tags.set(['nebula', 'info'])
         }
-    }
-}
-
-tasks.withType(Test) {
-    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 }
